modules/apps/web-experience/product-navigation/product-navigation-product-menu-theme-contributor/src/main/resources/META-INF/resources/product_navigation_product_menu.scss
@import "bourbon";
@import "variables";
@import "mixins";

body {
	&.open #wrapper {
		@include sm() {
			padding-left: $product-menu-width;
		}
	}

	&.open .control-menu, &.open .affix {
		@include sm() {
			left: $product-menu-width;
		}
	}

	&.open, &.sidenav-transition {
		@include sm() {
			overflow-x: hidden;
		}
	}

	&.sidenav-transition #wrapper {
		@include transition(padding 0.5s ease);
	}
}

.lfr-product-menu-panel.sidenav-menu-slider {
	z-index: $product-menu-zindex;

	&.open,
	.sidenav-menu {
		width: $product-menu-width;
	}
}

.product-menu {
	background-color: $product-menu-body-bg;

	.company-details .company-logo {
		margin-right: 5px;
		max-height: 32px;
		max-width: 32px;
	}
}

.product-menu {
	.form-control {
		background-color: #1B2228;
		border-radius: 0;
		border-width: 0;
		box-shadow: none;
		color: #869CAD;
		height: 40px;
		padding: 8px 12px;

		@include placeholder {
			color: #869CAD;
		}

		&:focus {
			color: #65B6F0;

			@include placeholder {
				color: #65B6F0;
			}
		}
	}
}

.product-menu {
	.collapse-icon:before {
		right: 25px;
	}
}

.product-menu {
	.lfr-icon-menu .btn-default {
		background-color: transparent;

		&:active {
			box-shadow: none;
			color: $product-menu-nav-link-color;
		}
	}
}

.product-menu {
	.nav a {
		color: $product-menu-nav-link-color;
	}

	.nav-equal-height {
		.nav > .active, > .active {
			border-left: 2px solid $product-menu-nav-link-active-color;
		}

		> .active > a, .nav > .active > a {
			&, &:focus, &:hover {
				color: $product-menu-nav-link-active-color;
			}
		}

		> .active, .nav > .active {
			border-left-color: $product-menu-nav-link-active-color;
		}
	}

	.nav-equal-height-heading {
		&:focus, &:hover {
			background-color: transparent;
		}

		.collapse-icon {
			&:after, &.collapsed:after {
				background-color: $product-menu-collapse-icon-bg;
				height: 12px;
			}

			&:before {
				color: $product-menu-nav-link-color;
				content: $product-menu-nav-equal-height-heading-open-collapse-icon;
				font-size: 15px;
				left: -8px;
			}

			&.collapsed:before {
				content: $product-menu-nav-equal-height-heading-closed-collapse-icon;
			}
		}
	}

	.nav-nested-margins > li .nav > li {
		border-left: 2px solid $product-menu-nav-link-color;

		.nav > li {
			border-left: 1px dotted $product-menu-nav-link-color;

			&.active {
				border-left: 1px solid $product-menu-nav-link-active-color;

				> a {
					color: $product-menu-nav-link-active-color;
				}
			}
		}
	}
}

.product-menu {
	.sidebar-header {
		background-color: $product-menu-header-bg;
		border-bottom: 1px solid $product-menu-header-border;
		color: $product-menu-header-color;

		a {
			color: $product-menu-header-link-color;

			&:focus, &:hover {
				color: $product-menu-header-link-hover-color;
			}
		}
	}
}

.product-menu {
	a.list-group-heading, button.list-group-heading, .list-group-heading[data-toggle="collapse"] {
		color: $product-menu-list-group-heading-color;
	}

	.list-group {
		box-shadow: none;
		margin-bottom: 0;
	}

	.list-group-heading.goto-link {
		color: $product-menu-nav-link-color;
	}

	.list-group-heading,
	.panel-title {
		> .panel-toggler {
			line-height: 32px;
			padding: 10px 40px 10px 24px;
		}

		.aspect-ratio-bg-cover {
			background-size: contain;
		}

		.site-administration-toggler {
			padding-right: 85px;
		}
	}

	.list-group-heading {
		background-color: $product-menu-list-group-heading-bg;
		border-color: transparent;
		font-weight: 500;
		overflow: hidden;
		text-overflow: ellipsis;
		white-space: nowrap;

		@include word-wrap(normal);

		&:after {
			background-color: $product-menu-list-group-heading-border;
			height: $product-menu-list-group-heading-border-width;
		}

		&.collapsed {
			font-weight: 300;
		}
	}

	.list-group-heading.collapsed {
		background-color: $product-menu-list-group-heading-collapsed-bg;

		&:after {
			background-color: $product-menu-list-group-heading-collapsed-border;
			height: $product-menu-list-group-heading-collapsed-border-width;
		}
	}

	.list-group-heading,
	.list-group-heading.collapsed {
		&:focus, &:hover {
			background-color: $product-menu-list-group-heading-hover-bg;

			&:after {
				background-color: $product-menu-list-group-heading-hover-border;
			}
		}
	}

	.list-group-heading {
		padding-left: 24px;
	}

	.list-group-item {
		border-width: $product-menu-list-group-item-border-width;
		padding: 8px 8px 8px 24px;
	}

	.collapse, .collapsing {
		> .list-group-item {
			background-color: $product-menu-list-group-item-bg;
		}
	}

	.nav > li > a {
		&:focus, &:hover {
			background-color: transparent;
		}
	}
}

.product-menu {
	.panel {
		background-color: transparent;
		border-bottom: 1px solid $product-menu-header-border;
		border-left-width: 0;
		border-radius: 0;
		border-right-width: 0;
		border-top-width: 0;
		box-shadow: none;
		color: $product-menu-nav-link-color;
	}

	.panel-body {
		background-color: $product-menu-panel-body-bg;
		padding: 0;
	}

	.panel-group {
		margin-bottom: 0;

		.panel + .panel {
			margin-top: 0;
		}

		.panel-heading + .panel-collapse {
			> .panel-body, > .list-group {
				border-top-width: 0;
			}

			&.in, &.collapsing {
				border-bottom: 2px solid $product-menu-panel-title-active-border;
			}
		}
	}

	.panel-heading {
		.panel-title > .panel-toggler {
			&:not(.collapsed) {
				background-color: $product-menu-panel-title-active-bg;
				border-left: $product-menu-panel-title-active-border-left-width $product-menu-panel-title-active-border-style $product-menu-panel-title-active-border;
				padding-left: 24px - $product-menu-panel-title-active-border-left-width;
			}

			.category-name, .user-name, .site-name {
				color: $product-menu-panel-title-color;
			}
		}

		padding: 0;
		position: relative;
	}
}

.product-menu {
	.user-icon, .sticker {
		display: inline-block;
		float: left;
		margin-right: 5px;
		position: static;
		vertical-align: middle;
	}

	.icon-sites {
		a {
			color: $product-menu-panel-title-color;
		}

		position: absolute;
		right: 46px;
		top: 9px;
		z-index: 1;
	}
}

.product-menu {
	.scope-selector {
		span {
			color: $product-menu-nav-link-active-color;
			padding-bottom: 10px;
		}

		.dropdown-menu span {
			color: inherit;
		}

		.scope-name {
			display: inline-block;
			min-width: 130px;
			padding-left: 0;
		}

		border-bottom: 1px solid $product-menu-nav-link-active-color;
		display: inline-block;
		margin-bottom: 10px;
	}
}

.product-menu {
	.staging-links {
		a, .links-separator {
			color: $product-menu-nav-link-color;
		}

		.active {
			color: $product-menu-nav-link-active-color;
		}

		.links-separator {
			padding: 0 5px;
		}
	}
}

.product-menu {
	.text-muted {
		opacity: 0.3;
	}
}

.product-menu {
	.layout-prototype-tree {
		padding-bottom: 30px;
	}

	.layouts-tree-container {
		padding-left: 10px;
	}

	.layout-tree-options.open > a {
		background-color: transparent;
	}

	.layout-set-tabs {
		.selected-layout-set {
			.layout-set-link, .icon-monospaced {
				color: $product-menu-nav-link-active-color;
			}
		}
	}

	.lfr-tree {
		li {
			margin-bottom: 0;
		}

		li.tree-node .tree-node-content .tree-label {
			display: block;
			padding-right: 20px;
			width: 100%;
		}

		.icon-file {
			display: none;
		}

		.layout-tree {
			overflow: hidden;
			text-overflow: ellipsis;
			white-space: nowrap;
		}
	}

	.tree-container {
		border-left: $product-menu-tree-border-width $product-menu-tree-border-style $product-menu-tree-border;
		margin-left: 10px;

		.tree-container {
			border-left: $product-menu-tree-child-border-width $product-menu-tree-child-border-style $product-menu-tree-child-border;
			margin-left: 20px;

			.tree-node-content {
				&:not(.tree-node-selected) {
					.tree-node-hidden-hitarea {
						&:before {
							color: $product-menu-tree-child-border;
							content: '\e00d';
							font-size: 0.7em;
							visibility: visible;
						}
					}
				}
			}
		}

		.tree-node-selected.tree-collapsed {
			box-shadow: -$product-menu-tree-border-width 0 0 0 $product-menu-tree-active-border;
			color: $product-menu-tree-active-color;
		}
	}

	.tree-hitarea {
		background-color: $product-menu-tree-hitarea-bg;
		border-radius: 3px;
		display: inline-block;
		line-height: 14px;
		margin-left: -11px;
		margin-top: -8px;
		position: absolute;
		text-align: center;
		top: 50%;
		width: 14px;
	}

	.tree-label {
		line-height: normal;
	}

	.tree-node [class^="icon-"] {
		margin-right: 0;
	}

	.tree-node-content {
		color: $product-menu-tree-color;
		display: inline;
		padding-left: 3px;
		padding-right: 25px;
		position: relative;

		&.tree-node-over, &.tree-node-selected {
			background: $product-menu-tree-active-bg;
		}

		.layout-tree {
			display: block;
			padding-bottom: 12px;
			padding-top: 12px;
		}

		.tree-hitarea {
			color: $product-menu-tree-hitarea-color;
			padding-right: 0;
		}

		.tree-label {
			margin-left: 12px;
		}
	}

	.tree-node-selected .tree-hitarea {
		background-color: $product-menu-tree-active-hitarea-bg;
	}

	.tree-pages .tree-node-selected .tree-label {
		.layout-tree, .icon-monospaced {
			color: $product-menu-tree-active-color;
			cursor: pointer;
		}
	}

	.tree-root-container {
		margin-left: -10px;
	}

	.tree-view {
		overflow: visible;
	}
}

.product-menu-expanded {
	&.sidebar-body {
		overflow: visible;
	}

	&.sidenav-fixed.sidenav-menu-slider {
		overflow: auto;
		visibility: visible;
		width: 100%;
	}
}

